Merged java 8 into java 11 branch updated with java 11 features